--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,35 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      小双的生理期
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <ion-list>
+    <ion-list-header>
+      每月日期
+    </ion-list-header>
+    <ion-item *ngFor="let item of menstrualList">
+      <p>日期：{{item.dateObj | date:"yyyy-MM-dd"}}</p>
+      <p>距上次天数：{{item.cycle}}</p>
+      <button ion-button item-end (click)="deleteMenstrual(item)">删除</button>
+    </ion-item>
+
+    <ion-item>
+      <ion-label>添加日期</ion-label>
+      <ion-datetime displayFormat="YYYY-MM-DD" [(ngModel)]="newMenstrual"></ion-datetime>
+      <button ion-button item-end [disabled]="!newMenstrual" (click)="addMenstrual()">添加</button>
+    </ion-item>
+  </ion-list>
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar>
+    <ion-title>
+      平均周期：
+      <span>{{averageCycle}}</span> 天
+    </ion-title>
+  </ion-toolbar>
+</ion-footer>
